--- a/mi_app/templates/crear_mascota.html
+++ b/mi_app/templates/crear_mascota.html
@@ -29,14 +29,13 @@
     </label>
 
     <ul class="menu">
-        <li class="item"><a href="index.html">Inicio</a></li>
-        <li class="item"><a href="{% url 'citas' %}">citas</a></li>
+        <li class="item"><a href="{% url 'index' %}">Inicio</a></li>
         <li class="item"><a href="{% url 'nosotros' %}">Nosotros</a></li>
         <li class="item"><a href="{% url 'servicios' %}">Servicios</a></li>
         <li class="item"><a href="{% url 'adopta' %}">Adopta</a></li>
         <li class="item" id="contactanos-btn">Contáctanos</li>
         {% if user.is_authenticated %}
-            <li class="item"><a href="{% url 'logout' %}">Cerrar Sesión</a></li>
+            <li class="item"><a href="{% url 'perfil' %}">Mi Perfil</a></li>
         {% else %}
             <li class="item"><a href="{% url 'signin' %}">Inicia Sesion</a></li>
             <li class="item"><a href="{% url 'signup' %}">registro</a></li>
