--- a/mi_app/templates/nosotros.html
+++ b/mi_app/templates/nosotros.html
@@ -87,38 +87,36 @@
         <p>Nuestra <strong>misión</strong> es ser tu aliado en el cuidado de tus mascotas, proporcionando servicios veterinarios integrales, desde consultas de rutina hasta cirugías especializadas. Contamos con tecnología avanzada y un equipo comprometido que se esfuerza por ofrecer diagnósticos precisos y tratamientos efectivos, asegurando que cada animal reciba la mejor atención posible en cada etapa de su vida.</p>
         <p>Además, en Motas no solo nos preocupamos por el bienestar de las mascotas con dueño, sino también por aquellos animales que aún buscan un hogar. Por ello, hemos desarrollado nuestra sección "Adopta", donde promovemos la adopción responsable de perros y gatos en busca de una segunda oportunidad. A través de esta iniciativa, facilitamos el encuentro entre familias y mascotas que necesitan amor y cuidado, asegurándonos de que cada adopción se realice de manera informada y responsable. Creemos firmemente que todos los animales merecen un hogar lleno de cariño, y trabajamos en conjunto con refugios y protectoras para hacer posible esta hermosa labor.</p>
         <p>En Motas, cada acción está guiada por nuestro amor y respeto hacia los animales, con el objetivo de mejorar su calidad de vida y fortalecer el vínculo entre las mascotas y sus dueños.</p>
-        <section class="contenedor-posts">
-            <h2>NUESTRO BLOG: <br>Contenido para el cuidado de tu mascota</h2>
-            <div class="post-grid">
-                <article class="post">
-                    <img src="../static/img/blog1.png" alt="Veterinaria para perros">
-                    <h3><a href="blog/cuidado-perros.html">Cuidado veterinario para perros</a></h3>
-                    <p>Consejos esenciales para mantener la salud de tu perro y prevenir enfermedades.</p>
-                    <a href="blog/cuidado-perros.html" class="leer-mas">Ver más</a>
-                </article>
 
-                <article class="post">
-                    <img src="../static/img/blog2.png" alt="Enfermedades en perros">
-                    <h3><a href="blog/enfermedades-perros.html">Enfermedades comunes en perros</a></h3>
-                    <p>Aprende sobre las enfermedades más comunes en los perros y cómo prevenirlas.</p>
-                    <a href="blog/enfermedades-perros.html" class="leer-mas">Ver más</a>
-                </article>
-
-                <article class="post">
-                    <img src="../static/img/blog3.png" alt="Salud en gatos">
-                    <h3><a href="blog/salud-felina.html">Salud felina y cuidados</a></h3>
-                    <p>Descubre los mejores consejos para mantener a tu gato sano y feliz.</p>
-                    <a href="blog/salud-felina.html" class="leer-mas">Ver más</a>
-                </article>
-
-                <article class="post">
-                    <img src="../static/img/blog4.png" alt="Vacunas para gatos">
-                    <h3><a href="blog/vacunacion-gatos.html">Vacunación en gatos</a></h3>
-                    <p>Lista de vacunas esenciales para proteger a tu gato de enfermedades graves.</p>
-                    <a href="blog/vacunacion-gatos.html" class="leer-mas">Ver más</a>
-                </article>
-            </div>
-        </section>
+<section class="contenedor-posts">
+    <h2>Contenido para el cuidado de tu mascota</h2>
+    <div class="post-grid">
+        <article class="post">
+            <img src="../static/img/blog1.png" alt="Veterinaria para perros">
+            <h3><a href="../blog/cuidado_perros/">Cuidado veterinario para perros</a></h3>
+            <p>Consejos esenciales para mantener la salud de tu perro y prevenir enfermedades.</p>
+            <a href="../blog/cuidado_perros/" class="leer-mas">Ver más</a>
+        </article>
+        <article class="post">
+            <img src="../static/img/blog2.png" alt="Enfermedades en perros">
+            <h3><a href="../blog/enfermedades_perros/">Enfermedades comunes en perros</a></h3>
+            <p>Aprende sobre las enfermedades más comunes en los perros y cómo prevenirlas.</p>
+            <a href="../blog/enfermedades_perros/" class="leer-mas">Ver más</a>
+        </article>
+        <article class="post">
+            <img src="../static/img/blog3.png" alt="Salud en gatos">
+            <h3><a href="../blog/salud_felina/">Salud felina y cuidados</a></h3>
+            <p>Descubre los mejores consejos para mantener a tu gato sano y feliz.</p>
+            <a href="../blog/salud_felina/" class="leer-mas">Ver más</a>
+        </article>
+        <article class="post">
+            <img src="../static/img/blog4.png" alt="Vacunas para gatos">
+            <h3><a href="../blog/vacunacion_gatos/">Vacunación en gatos</a></h3>
+            <p>Lista de vacunas esenciales para proteger a tu gato de enfermedades graves.</p>
+            <a href="../blog/vacunacion_gatos/" class="leer-mas">Ver más</a>
+        </article>
+    </div>
+</section>
 
         <div class="nosotros-equipo">
             <h3>NUESTRO EQUIPO</h3>
@@ -231,31 +229,28 @@
             </div>
 
             <!-- Servicios -->
-            <div class="redes-section">
-                <h3>SERVICIOS</h3>
-                <ul>
-                    <li><a href="#">Ayudas Diagnósticas</a></li>
-                    <li><a href="#">Hospitalización</a></li>
-                    <li><a href="#">Urgencias 24 Horas</a></li>
-                    <li><a href="#">Cirugía</a></li>
-                    <li><a href="#">Medicina Preventiva</a></li>
-                    <li><a href="#">Consulta</a></li>
-                    <li><a href="#">Trámite de viaje</a></li>
-                    <li><a href="#">Laboratorio Clínico</a></li>
-                </ul>
-            </div>
-
-            <!-- Información -->
-            <div class="redes-section">
-                <h3>INFORMACIÓN</h3>
-                <ul>
-                    <li><a href="#">Nosotros</a></li>
-                    <li><a href="#">Contáctanos</a></li>
-                    <li><a href="#">Preguntas frecuentes sobre cuidado animal</a></li>
-                    <li><a href="#">Blog/Noticias</a></li>
-                    <li><a href="#">Términos y Condiciones</a></li>
-                </ul>
-            </div>
+                    <div class="redes-section">
+            <h3>SERVICIOS</h3>
+            <ul>
+                <li><a href="{% url 'ayudas' %}">Ayudas Diagnósticas</a></li>
+                <li><a href="{% url 'hospitalizacion' %}">Hospitalización</a></li>
+                <li><a href="{% url 'urgencias' %}">Urgencias 24 Horas</a></li>
+                <li><a href="{% url 'cirugia' %}">Cirugía</a></li>
+                <li><a href="{% url 'medicina' %}">Medicina Preventiva</a></li>
+                <li><a href="{% url 'consulta' %}">Consulta</a></li>
+                <li><a href="{% url 'tramites' %}">Trámite de viaje</a></li>
+                <li><a href="{% url 'laboratorio' %}">Laboratorio Clínico</a></li>
+            </ul>
+        </div>
+        <!-- Información -->
+        <div class="redes-section">
+            <h3>INFORMACIÓN</h3>
+            <ul>
+                <li><a href="{% url 'nosotros' %}">Nosotros</a></li>
+                <li><a href="https://wa.me/573113020495" target="_blank">Contáctanos</a></li>
+                <li><a href="{% url 'adopta' %}">Adopta</a></li>
+            </ul>
+        </div>
         </div>
     </section>
 
