--- a/mi_app/templates/index.html
+++ b/mi_app/templates/index.html
@@ -187,36 +187,36 @@
 </section>
 
 <!--************************* Blog ******************************-->
-
 <section class="contenedor-posts">
     <h2>Contenido para el cuidado de tu mascota</h2>
     <div class="post-grid">
         <article class="post">
-            <img src="../static/img/blog1.png" alt="Veterinaria para perros">
-            <h3><a href="../blog/cuidado_perros/">Cuidado veterinario para perros</a></h3>
+            <img src="{% static 'img/blog1.png' %}" alt="Veterinaria para perros">
+            <h3><a href="{% url 'cuidado_perros' %}">Cuidado veterinario para perros</a></h3>
             <p>Consejos esenciales para mantener la salud de tu perro y prevenir enfermedades.</p>
-            <a href="../blog/cuidado_perros/" class="leer-mas">Ver más</a>
+            <a href="{% url 'cuidado_perros' %}" class="leer-mas">Ver más</a>
         </article>
         <article class="post">
-            <img src="../static/img/blog2.png" alt="Enfermedades en perros">
-            <h3><a href="../blog/enfermedades_perros/">Enfermedades comunes en perros</a></h3>
+            <img src="{% static 'img/blog2.png' %}" alt="Enfermedades en perros">
+            <h3><a href="{% url 'enfermedades_perros' %}">Enfermedades comunes en perros</a></h3>
             <p>Aprende sobre las enfermedades más comunes en los perros y cómo prevenirlas.</p>
-            <a href="../blog/enfermedades_perros/" class="leer-mas">Ver más</a>
+            <a href="{% url 'enfermedades_perros' %}" class="leer-mas">Ver más</a>
         </article>
         <article class="post">
-            <img src="../static/img/blog3.png" alt="Salud en gatos">
-            <h3><a href="../blog/salud_felina/">Salud felina y cuidados</a></h3>
+            <img src="{% static 'img/blog3.png' %}" alt="Salud en gatos">
+            <h3><a href="{% url 'salud_felina' %}">Salud felina y cuidados</a></h3>
             <p>Descubre los mejores consejos para mantener a tu gato sano y feliz.</p>
-            <a href="../blog/salud_felina/" class="leer-mas">Ver más</a>
+            <a href="{% url 'salud_felina' %}" class="leer-mas">Ver más</a>
         </article>
         <article class="post">
-            <img src="../static/img/blog4.png" alt="Vacunas para gatos">
-            <h3><a href="../blog/vacunacion_gatos/">Vacunación en gatos</a></h3>
+            <img src="{% static 'img/blog4.png' %}" alt="Vacunas para gatos">
+            <h3><a href="{% url 'vacunacion_gatos' %}">Vacunación en gatos</a></h3>
             <p>Lista de vacunas esenciales para proteger a tu gato de enfermedades graves.</p>
-            <a href="../blog/vacunacion_gatos/" class="leer-mas">Ver más</a>
+            <a href="{% url 'vacunacion_gatos' %}" class="leer-mas">Ver más</a>
         </article>
     </div>
 </section>
+
 
 
 
@@ -318,12 +318,12 @@ document.getElementById('btn-whatsapp-modal').onclick = function() {
 };
 
 document.getElementById('btn-agenda-modal').onclick = function() {
-    // Cambia 'ir-a-citas' por el id real de tu botón de agendar si es diferente
+    // Cambia 'ir-a-citas' por el id real
     var agendarBtn = document.getElementById('ir-a-citas') || document.getElementById('abrir-modal-cita');
     if (agendarBtn) {
         agendarBtn.click();
     } else {
-        // Si no hay botón, puedes redirigir a la página de citas
+
         window.location.href = '/citas/';
     }
 };
