--- a/mi_app/templates/blog/enfermedades_perros.html
+++ b/mi_app/templates/blog/enfermedades_perros.html
@@ -58,7 +58,7 @@
             </ul>
         </article>
 
-        <a href="/Project2/index.html" class="volver">⬅ Volver al inicio</a>
+        <a href="{% url 'index' %}" class="volver">⬅ Volver al inicio</a>
     </main>
 
  <!--************************* Footer ******************************-->
