Apartado para ver los detalles de las mascotas

--- a/mi_app/templates/blog/enfermedades_perros.html
+++ b/mi_app/templates/blog/enfermedades_perros.html
@@ -53,7 +53,8 @@
             <p>Parásitos externos que pueden causar enfermedades graves como la Ehrlichiosis y la Babesiosis.</p>
             <ul>
                 <li><strong>Síntomas:</strong> Picazón, pérdida de pelo, heridas en la piel.</li>
-                <li><strong>Prevención:</strong> Pipetas, collares antiparasitarios y revisiones frecuentes.</li>
+                <li><strong>Prevención:</strong> Pipetas, collares antipara
+                    sitarios y revisiones frecuentes.</li>
                 <li><strong>Tratamiento:</strong> Baños medicados y medicamentos antiparasitarios.</li>
             </ul>
         </article>
