Apartado para ver los detalles de las mascotas

--- a/mi_app/templates/mascota_detail.html
+++ b/mi_app/templates/mascota_detail.html
@@ -141,8 +141,9 @@
                 {% if not forloop.last %}<hr>{% endif %}
             {% endfor %}
         </div>
-        
-        <button type="submit" class="Guardar-btn">GUARDAR</button>
+        <div style="text-align: center; margin: 20px 0;">
+            <button type="submit" class="Guardar-btn">GUARDAR CAMBIOS</button>
+        </div>
     </form>
 
     <script>
